@@ -286,6 +286,21 @@
 
 
 --
+-- Retrieve the project's file name.
+--
+-- @param prj
+--    The project object to query.
+-- @return
+--    The project's file name. This will usually match the project's
+--    name, or the external name for externally created projects.
+--
+
+	function project.getfilename(prj)
+		return prj.externalname or prj.name
+	end
+
+
+--
 -- Retrieve the project's file system location.
 --
 -- @param prj
